--- a/store.html
+++ b/store.html
@@ -99,7 +99,7 @@
 
             <div class="col-md-9">
                 <div class="row carousel-holder">
-                    <div class="col-md-12">
+                    <div class="col-md-9">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -256,7 +256,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Zainy Brainy 2015</p>
                 </div>
             </div>
         </footer>
