--- a/store.html
+++ b/store.html
@@ -9,11 +9,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Zainy Brainy Toys</title>
+    <title>Store</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -49,21 +48,19 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><img alt="Brand" src="images/zany_brainy_logo_bw.png"></li>
-                            <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                             <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store <span class="caret"></span></a>
+                            <a href="store.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Blocks and Building</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">Counting Numbers</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="#">Shapes and Time</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul> <!--end Navigation-->
                         <form class="navbar-form navbar-right" role="search">
                             <button type="submit" class="btn btn-default">My Cart </button>
@@ -252,7 +249,7 @@
 
     <div class="container">
         <hr>
-        <!-- Footer -->
+<!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
