--- a/store.html
+++ b/store.html
@@ -48,8 +48,8 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><img alt="Brand" src="images/zany_brainy_logo_bw.png"></li>
-                            <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-                            <li class="dropdown">
+                            <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                            <li class="active" "dropdown">
                             <a href="store.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#">Blocks and Building</a></li>
@@ -74,6 +74,13 @@
             </nav> <!-- end Navigation-->
 	
         </div>  <!-- end row -->
+        <div class="crumbs">
+                        <ol class="breadcrumb">
+                            <li><a href="store.html">Store</a></li>
+                            <li class="active"><a href="#">Blocks and Building</a></li> 
+                            
+                        </ol>
+                    </div>
     </div>   <!-- end container --> 
 </header>
 
@@ -132,7 +139,10 @@
                                 <h4 class="pull-right">$24.99</h4>
                                 <h4><a href="#">Counter</a>
                                 </h4>
-                                <p>See more snippets like this online store item at <a target="_blank" href="http://www.bootsnipp.com">Bootsnipp - http://bootsnipp.com</a>.</p>
+                                <p>Incididunt ea lorem. Nam illum quem aut litteris. Non eram minim hic commodo ad 
+                                    quibusdam aut minim, velit distinguantur probant varias aliquip ad cillum 
+                                    expetendis graviterque.
+                                </p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">15 reviews</p>
@@ -151,10 +161,13 @@
                         <div class="thumbnail">
                             <img src="images/clock.jpg" alt="Toy CLock">
                             <div class="caption">
-                                <h4 class="pull-right">$64.99</h4>
-                                <h4><a href="#">Second Product</a>
+                                <h4 class="pull-right">$24.99</h4>
+                                <h4><a href="#">Learning Clock</a>
                                 </h4>
-                                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p>De ne minim malis elit non offendit ex occaecat, malis doctrina do senserit ne 
+                                    dolore voluptate commodo, ad quae cillum fore vidisse, malis exquisitaque 
+                                    cernantur cillum expetendis.
+                                </p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">12 reviews</p>
@@ -171,12 +184,15 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="images/shapes_1.jpg" alt="Shapes">
+                            <img src="images/blocks.jpg" alt="Shapes">
                             <div class="caption">
-                                <h4 class="pull-right">$74.99</h4>
-                                <h4><a href="#">Third Product</a>
+                                <h4 class="pull-right">$34.99</h4>
+                                <h4><a href="#">Wooden Blocks</a>
                                 </h4>
-                                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p>Culpa est in sunt officia, quae praesentibus consequat elit ingeniis ad do quid 
+                                    iudicem si consequat enim ne vidisse efflorescere. Quamquam se labore, varias 
+                                    nescius senserit do est.
+                                </p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">31 reviews</p>
@@ -195,10 +211,13 @@
                         <div class="thumbnail">
                             <img src="images/tool_bench.jpg" alt="Toy Tool Bench">
                             <div class="caption">
-                                <h4 class="pull-right">$84.99</h4>
-                                <h4><a href="#">Fourth Product</a>
+                                <h4 class="pull-right">$44.99</h4>
+                                <h4><a href="#">Work Bench</a>
                                 </h4>
-                                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p>Qui o anim duis malis, expetendis ab dolor appellat, ad et exquisitaque, amet 
+                                    singulis ut litteris. Qui varias fabulas, do quibusdam sed officia ubi quo quis 
+                                    firmissimum et eu quae.
+                                </p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">6 reviews</p>
@@ -217,10 +236,13 @@
                         <div class="thumbnail">
                             <img src="images/counter_2.jpg" alt="Numbers">
                             <div class="caption">
-                                <h4 class="pull-right">$94.99</h4>
-                                <h4><a href="#">Fifth Product</a>
+                                <h4 class="pull-right">$14.99</h4>
+                                <h4><a href="#">Learn to Count</a>
                                 </h4>
-                                <p>This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <p>Minim laborum e fugiat tamen id possumus amet quibusdam cupidatat si ea elit 
+                                    excepteur instituendarum qui mentitum aliqua deserunt ubi dolor litteris si 
+                                    expetendis, dolore voluptate.
+                                </p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">18 reviews</p>
@@ -236,10 +258,9 @@
                     </div>
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
-                        <h4><a href="#">Like this template?</a>
+                        <h4><a href="#">Can Find It Here?</a>
                         </h4>
-                        <p>If you like this template, then check out <a target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">this tutorial</a> on how to build a working review system for your online store!</p>
-                        <a class="btn btn-primary" target="_blank" href="http://maxoffsky.com/code-blog/laravel-shop-tutorial-1-building-a-review-system/">View Tutorial</a>
+                        <p>Contact us and we can place a special order for any item that is out of stock. <a href="contact.html">Email Us Here</a></p>
                     </div> 
 
                 </div> <!-- end row-->
