--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><img alt="Brand" src="images/zany_brainy_logo_bw.png"></li>
-                            <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                            <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                             <li class="dropdown">
                             <a href="store.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Store <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
@@ -64,7 +64,7 @@
                                     <li><a href="#">Shapes and Time</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About</a></li>
+                            <li  class="active"><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul> <!--end Navigation-->
                         <form class="navbar-form navbar-right" role="search">
